Fixing map zoom on smaller devices

--- a/web/static/web/css/mapa.css
+++ b/web/static/web/css/mapa.css
@@ -216,7 +216,6 @@ html, body {
 }
 
 #map {
-  display: flex;
   flex: 1 1 auto;
   margin-top: 50px;
   height: 100%;
